# Code

Ccode/: Makefile  Polymorphism_test.cpp  test.cpp
Ccode/cmake-test/: CMakeLists.txt
Ccode/cmake-test/simple test2/: Makefile  header.h
Ccode/cmake-test/simpletest1/: Makefile  main.cpp
Ccode/cmake-test/simpletest1/src/: String.cpp  String.h  objlist
Ccode/cmake-test/simpletest2/: header.cpp  header.d  hello.cpp  hello.d
MATLAB/: montcarlo.m  montcarlo.py
NAcode/: B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  Makefile  Solve.cpp  Solve.h  header.h  main.cpp  test.cpp
NAcode/MakefileExample/: header.cpp
NAcode/NAproject1/: C.cpp  E.cpp  F.cpp  Makefile  Solve.cpp  Solve.h  report.md
NAcode/project1/: B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  Makefile  Solve.cpp  Solve.h  report.md
Pycode/: hello.py  help-chc.py  main.py  module.py  num.py  skeleton.ipynb  tan.py
Pycode/PyData/: class_example.py  course_2.py  excep_deal.py  file_deal.py  file_example.txt  numpy_use.py  run1.py  run2.py  test.ipynb
Pycode/PyData/example/module/: my_module.py
Pycode/PyData/example/parent/: main.py
Pycode/PyData/example/parent/pack1/: __init__.py  module_1.py
Pycode/PyData/example/parent/pack2/: __init__.py  module_2.py
Pycode/Python/: Catenary3.ipynb  hello.py  read_img.py  robot_src5.py  test.ipynb
Rcode/: .RData  .Rhistory  test.R  test.Rmd
